Ensure tracker cells are correctly visible when using keyboard focus

--- a/docs/styles/shared/tracker.css
+++ b/docs/styles/shared/tracker.css
@@ -73,6 +73,7 @@ body {
   position: absolute;
   opacity: 0;
   z-index: -1;
+  margin: 0;
 }
 
 #tracker td > div > label {
